# DPP-PDC

./: .gitignore  README.md  pyproject.toml
configs/: experiment.toml  my_config.toml
datasets/: Cu-Mg_Zn_1000K.csv  Cu-Mg_Zn_1050K.csv  Cu-Mg_Zn_1100K.csv  Cu-Mg_Zn_1150K.csv  Cu-Mg_Zn_1200K.csv  Cu-Mg_Zn_1250K.csv  Cu-Mg_Zn_1300K.csv  Cu-Mg_Zn_1400K.csv  Cu-Mg_Zn_500K.csv  Cu-Mg_Zn_550K.csv  Cu-Mg_Zn_600K.csv  Cu-Mg_Zn_650K.csv  Cu-Mg_Zn_700K.csv  Cu-Mg_Zn_750K.csv  Cu-Mg_Zn_800K.csv  Cu-Mg_Zn_850K.csv  Cu-Mg_Zn_900K.csv  Cu-Mg_Zn_950K.csv  Cu-Mg_Zn_all.csv
dpp_pdc/: __init__.py  active_learning.py  cli.py  config.py  data_preprocessing.py  pymc_dpp.py  run_experiments.py  sampling_distribution.py  uncertainty_strategies.py  visualization.py
examples/: quickstart.ipynb
